@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.beans.factory.support;
 
 import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -26,7 +25,6 @@ import java.util.AbstractCollection;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -35,8 +33,6 @@ import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import org.springframework.beans.PropertyEditorRegistrar;
-import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.factory.BeanCreationException;
 import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
 import org.springframework.beans.factory.ObjectProvider;
@@ -65,10 +61,10 @@ import static org.springframework.core.testfixture.TestGroup.LONG_RUNNING;
  * @author Sam Brannen
  * @since 20.01.2006
  */
-public class BeanFactoryGenericsTests {
+class BeanFactoryGenericsTests {
 
 	@Test
-	public void testGenericSetProperty() {
+	void testGenericSetProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -85,7 +81,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListProperty() throws Exception {
+	void testGenericListProperty() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -102,7 +98,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListPropertyWithAutowiring() throws Exception {
+	void testGenericListPropertyWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -117,7 +113,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListPropertyWithInvalidElementType() {
+	void testGenericListPropertyWithInvalidElementType() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericIntegerBean.class);
 
@@ -135,7 +131,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListPropertyWithOptionalAutowiring() {
+	void testGenericListPropertyWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -147,7 +143,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMapProperty() {
+	void testGenericMapProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -159,12 +155,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericListOfArraysProperty() {
+	void testGenericListOfArraysProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -172,14 +168,14 @@ public class BeanFactoryGenericsTests {
 
 		assertThat(gb.getListOfArrays().size()).isEqualTo(1);
 		String[] array = gb.getListOfArrays().get(0);
-		assertThat(array.length).isEqualTo(2);
+		assertThat(array).hasSize(2);
 		assertThat(array[0]).isEqualTo("value1");
 		assertThat(array[1]).isEqualTo("value2");
 	}
 
 
 	@Test
-	public void testGenericSetConstructor() {
+	void testGenericSetConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -196,7 +192,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetConstructorWithAutowiring() {
+	void testGenericSetConstructorWithAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("integer1", 4);
 		bf.registerSingleton("integer2", 5);
@@ -211,7 +207,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetConstructorWithOptionalAutowiring() {
+	void testGenericSetConstructorWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -223,7 +219,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetListConstructor() throws Exception {
+	void testGenericSetListConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -246,7 +242,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithAutowiring() throws Exception {
+	void testGenericSetListConstructorWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("integer1", 4);
 		bf.registerSingleton("integer2", 5);
@@ -265,7 +261,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
+	void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -280,7 +276,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetMapConstructor() {
+	void testGenericSetMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -298,12 +294,12 @@ public class BeanFactoryGenericsTests {
 
 		assertThat(gb.getIntegerSet().contains(4)).isTrue();
 		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceConstructor() throws Exception {
+	void testGenericMapResourceConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -316,13 +312,13 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapConstructor() {
+	void testGenericMapMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -339,16 +335,16 @@ public class BeanFactoryGenericsTests {
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
 		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
-		assertThat(gb.getPlainMap().size()).isEqualTo(2);
+		assertThat(gb.getPlainMap()).hasSize(2);
 		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
 		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
 		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndConversion() {
+	void testGenericMapMapConstructorWithSameRefAndConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -362,22 +358,22 @@ public class BeanFactoryGenericsTests {
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
 		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
-		assertThat(gb.getPlainMap().size()).isEqualTo(2);
+		assertThat(gb.getPlainMap()).hasSize(2);
 		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
 		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
 		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(new Short("1"))).isEqualTo(0);
-		assertThat(gb.getShortMap().get(new Short("2"))).isEqualTo(3);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndNoConversion() {
+	void testGenericMapMapConstructorWithSameRefAndNoConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<Short, Integer> input = new HashMap<>();
-		input.put(new Short((short) 1), 0);
-		input.put(new Short((short) 2), 3);
+		input.put((short) 1, 0);
+		input.put((short) 2, 3);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 
@@ -385,13 +381,13 @@ public class BeanFactoryGenericsTests {
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
 		assertThat(gb.getShortMap()).isSameAs(gb.getPlainMap());
-		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(new Short("1"))).isEqualTo(0);
-		assertThat(gb.getShortMap().get(new Short("2"))).isEqualTo(3);
+		assertThat(gb.getShortMap()).hasSize(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeConstructor() {
+	void testGenericMapWithKeyTypeConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -408,14 +404,9 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueConstructor() {
+	void testGenericMapWithCollectionValueConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
-			@Override
-			public void registerCustomEditors(PropertyEditorRegistry registry) {
-				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-			}
-		});
+		bf.addPropertyEditorRegistrar(registry -> registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
@@ -439,7 +430,7 @@ public class BeanFactoryGenericsTests {
 
 
 	@Test
-	public void testGenericSetFactoryMethod() {
+	void testGenericSetFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -457,7 +448,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetListFactoryMethod() throws Exception {
+	void testGenericSetListFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -481,7 +472,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetMapFactoryMethod() {
+	void testGenericSetMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -500,12 +491,12 @@ public class BeanFactoryGenericsTests {
 
 		assertThat(gb.getIntegerSet().contains(4)).isTrue();
 		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceFactoryMethod() throws Exception {
+	void testGenericMapResourceFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -519,13 +510,13 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapFactoryMethod() {
+	void testGenericMapMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -544,12 +535,12 @@ public class BeanFactoryGenericsTests {
 
 		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
 		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeFactoryMethod() {
+	void testGenericMapWithKeyTypeFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -562,19 +553,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
-		assertThat(gb.getLongMap().get(new Long("6"))).isEqualTo("7");
+		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(Long.valueOf("6"))).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueFactoryMethod() {
+	void testGenericMapWithCollectionValueFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
-			@Override
-			public void registerCustomEditors(PropertyEditorRegistry registry) {
-				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-			}
-		});
+		bf.addPropertyEditorRegistrar(registry -> registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
 
@@ -598,7 +584,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericListBean() throws Exception {
+	void testGenericListBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -608,7 +594,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericSetBean() throws Exception {
+	void testGenericSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -618,18 +604,18 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMapBean() throws Exception {
+	void testGenericMapBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		Map<?, ?> map = (Map<?, ?>) bf.getBean("map");
-		assertThat(map.size()).isEqualTo(1);
+		assertThat(map).hasSize(1);
 		assertThat(map.keySet().iterator().next()).isEqualTo(10);
 		assertThat(map.values().iterator().next()).isEqualTo(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericallyTypedIntegerBean() {
+	void testGenericallyTypedIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -640,7 +626,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericallyTypedSetOfIntegerBean() {
+	void testGenericallyTypedSetOfIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -652,7 +638,7 @@ public class BeanFactoryGenericsTests {
 
 	@Test
 	@EnabledForTestGroups(LONG_RUNNING)
-	public void testSetBean() throws Exception {
+	void testSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
@@ -672,7 +658,7 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-9493
 	 */
 	@Test
-	public void parameterizedStaticFactoryMethod() {
+	void parameterizedStaticFactoryMethod() {
 		RootBeanDefinition rbd = new RootBeanDefinition(Mockito.class);
 		rbd.setFactoryMethodName("mock");
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
@@ -683,7 +669,7 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	/**
@@ -698,7 +684,7 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-10411
 	 */
 	@Test
-	public void parameterizedInstanceFactoryMethod() {
+	void parameterizedInstanceFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -715,11 +701,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
+	void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -736,11 +722,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithWrappedClassName() {
+	void parameterizedInstanceFactoryMethodWithWrappedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition();
@@ -755,11 +741,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithInvalidClassName() {
+	void parameterizedInstanceFactoryMethodWithInvalidClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -776,11 +762,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isNull();
 		assertThat(bf.getType("mock")).isNull();
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(0);
+		assertThat(beans).hasSize(0);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithIndexedArgument() {
+	void parameterizedInstanceFactoryMethodWithIndexedArgument() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -797,11 +783,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test  // SPR-16720
-	public void parameterizedInstanceFactoryMethodWithTempClassLoader() {
+	void parameterizedInstanceFactoryMethodWithTempClassLoader() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setTempClassLoader(new OverridingClassLoader(getClass().getClassLoader()));
 
@@ -819,11 +805,11 @@ public class BeanFactoryGenericsTests {
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans.size()).isEqualTo(1);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void testGenericMatchingWithBeanNameDifferentiation() {
+	void testGenericMatchingWithBeanNameDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
@@ -839,15 +825,15 @@ public class BeanFactoryGenericsTests {
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThat(numberStoreNames.length).isEqualTo(2);
+		assertThat(numberStoreNames).hasSize(2);
 		assertThat(numberStoreNames[0]).isEqualTo("doubleStore");
 		assertThat(numberStoreNames[1]).isEqualTo("floatStore");
-		assertThat(doubleStoreNames.length).isEqualTo(0);
-		assertThat(floatStoreNames.length).isEqualTo(0);
+		assertThat(doubleStoreNames).hasSize(0);
+		assertThat(floatStoreNames).hasSize(0);
 	}
 
 	@Test
-	public void testGenericMatchingWithFullTypeDifferentiation() {
+	void testGenericMatchingWithFullTypeDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
@@ -868,12 +854,12 @@ public class BeanFactoryGenericsTests {
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThat(numberStoreNames.length).isEqualTo(2);
+		assertThat(numberStoreNames).hasSize(2);
 		assertThat(numberStoreNames[0]).isEqualTo("store1");
 		assertThat(numberStoreNames[1]).isEqualTo("store2");
-		assertThat(doubleStoreNames.length).isEqualTo(1);
+		assertThat(doubleStoreNames).hasSize(1);
 		assertThat(doubleStoreNames[0]).isEqualTo("store1");
-		assertThat(floatStoreNames.length).isEqualTo(1);
+		assertThat(floatStoreNames).hasSize(1);
 		assertThat(floatStoreNames[0]).isEqualTo("store2");
 
 		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
@@ -939,7 +925,7 @@ public class BeanFactoryGenericsTests {
 	}
 
 	@Test
-	public void testGenericMatchingWithUnresolvedOrderedStream() {
+	void testGenericMatchingWithUnresolvedOrderedStream() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
@@ -960,7 +946,7 @@ public class BeanFactoryGenericsTests {
 
 
 	@SuppressWarnings("serial")
-	public static class NamedUrlList extends LinkedList<URL> {
+	public static class NamedUrlList extends ArrayList<URL> {
 	}
 
 
@@ -1011,11 +997,8 @@ public class BeanFactoryGenericsTests {
 		@SuppressWarnings("unchecked")
 		public <T> T createMock(Class<T> toMock) {
 			return (T) Proxy.newProxyInstance(BeanFactoryGenericsTests.class.getClassLoader(), new Class<?>[] {toMock},
-					new InvocationHandler() {
-						@Override
-						public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-							throw new UnsupportedOperationException("mocked!");
-						}
+					(InvocationHandler) (proxy, method, args) -> {
+						throw new UnsupportedOperationException("mocked!");
 					});
 		}
 	}
