@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,13 +19,11 @@ package org.springframework.web.reactive.function.server;
 import java.net.InetSocketAddress;
 import java.net.URI;
 import java.security.Principal;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -47,10 +45,12 @@ import org.springframework.http.MediaType;
 import org.springframework.http.codec.HttpMessageReader;
 import org.springframework.http.codec.multipart.Part;
 import org.springframework.http.server.PathContainer;
+import org.springframework.http.server.RequestPath;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
+import org.springframework.util.MimeTypeUtils;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.cors.reactive.CorsUtils;
 import org.springframework.web.reactive.function.BodyExtractor;
@@ -71,8 +71,6 @@ import org.springframework.web.util.pattern.PathPatternParser;
 public abstract class RequestPredicates {
 
 	private static final Log logger = LogFactory.getLog(RequestPredicates.class);
-
-	private static final PathPatternParser DEFAULT_PATTERN_PARSER = new PathPatternParser();
 
 
 	/**
@@ -115,7 +113,7 @@ public abstract class RequestPredicates {
 		if (!pattern.isEmpty() && !pattern.startsWith("/")) {
 			pattern = "/" + pattern;
 		}
-		return pathPredicates(DEFAULT_PATTERN_PARSER).apply(pattern);
+		return pathPredicates(PathPatternParser.defaultInstance).apply(pattern);
 	}
 
 	/**
@@ -439,13 +437,12 @@ public abstract class RequestPredicates {
 
 		public HttpMethodPredicate(HttpMethod httpMethod) {
 			Assert.notNull(httpMethod, "HttpMethod must not be null");
-			this.httpMethods = EnumSet.of(httpMethod);
+			this.httpMethods = Collections.singleton(httpMethod);
 		}
 
 		public HttpMethodPredicate(HttpMethod... httpMethods) {
 			Assert.notEmpty(httpMethods, "HttpMethods must not be empty");
-
-			this.httpMethods = EnumSet.copyOf(Arrays.asList(httpMethods));
+			this.httpMethods = new LinkedHashSet<>(Arrays.asList(httpMethods));
 		}
 
 		@Override
@@ -456,18 +453,16 @@ public abstract class RequestPredicates {
 			return match;
 		}
 
-		@Nullable
 		private static HttpMethod method(ServerRequest request) {
 			if (CorsUtils.isPreFlightRequest(request.exchange().getRequest())) {
 				String accessControlRequestMethod =
 						request.headers().firstHeader(HttpHeaders.ACCESS_CONTROL_REQUEST_METHOD);
-				return HttpMethod.resolve(accessControlRequestMethod);
+				if (accessControlRequestMethod != null) {
+					return HttpMethod.valueOf(accessControlRequestMethod);
+				}
 			}
-			else {
-				return request.method();
-			}
+			return request.method();
 		}
-
 
 		@Override
 		public void accept(Visitor visitor) {
@@ -486,9 +481,9 @@ public abstract class RequestPredicates {
 	}
 
 
-	private static class PathPatternPredicate implements RequestPredicate {
+	private static class PathPatternPredicate implements RequestPredicate, ChangePathPatternParserVisitor.Target {
 
-		private final PathPattern pattern;
+		private PathPattern pattern;
 
 		public PathPatternPredicate(PathPattern pattern) {
 			Assert.notNull(pattern, "'pattern' must not be null");
@@ -497,7 +492,7 @@ public abstract class RequestPredicates {
 
 		@Override
 		public boolean test(ServerRequest request) {
-			PathContainer pathContainer = request.pathContainer();
+			PathContainer pathContainer = request.requestPath().pathWithinApplication();
 			PathPattern.PathMatchInfo info = this.pattern.matchAndExtract(pathContainer);
 			traceMatch("Pattern", this.pattern.getPatternString(), request.path(), info != null);
 			if (info != null) {
@@ -523,13 +518,19 @@ public abstract class RequestPredicates {
 
 		@Override
 		public Optional<ServerRequest> nest(ServerRequest request) {
-			return Optional.ofNullable(this.pattern.matchStartOfPath(request.pathContainer()))
+			return Optional.ofNullable(this.pattern.matchStartOfPath(request.requestPath().pathWithinApplication()))
 					.map(info -> new SubPathServerRequestWrapper(request, info, this.pattern));
 		}
 
 		@Override
 		public void accept(Visitor visitor) {
 			visitor.path(this.pattern.getPatternString());
+		}
+
+		@Override
+		public void changeParser(PathPatternParser parser) {
+			String patternString = this.pattern.getPatternString();
+			this.pattern = parser.parse(patternString);
 		}
 
 		@Override
@@ -564,12 +565,13 @@ public abstract class RequestPredicates {
 		}
 	}
 
+
 	private static class ContentTypePredicate extends HeadersPredicate {
 
 		private final Set<MediaType> mediaTypes;
 
 		public ContentTypePredicate(MediaType... mediaTypes) {
-			this(new HashSet<>(Arrays.asList(mediaTypes)));
+			this(Set.of(mediaTypes));
 		}
 
 		private ContentTypePredicate(Set<MediaType> mediaTypes) {
@@ -601,12 +603,13 @@ public abstract class RequestPredicates {
 		}
 	}
 
+
 	private static class AcceptPredicate extends HeadersPredicate {
 
 		private final Set<MediaType> mediaTypes;
 
 		public AcceptPredicate(MediaType... mediaTypes) {
-			this(new HashSet<>(Arrays.asList(mediaTypes)));
+			this(Set.of(mediaTypes));
 		}
 
 		private AcceptPredicate(Set<MediaType> mediaTypes) {
@@ -628,7 +631,7 @@ public abstract class RequestPredicates {
 				acceptedMediaTypes = Collections.singletonList(MediaType.ALL);
 			}
 			else {
-				MediaType.sortBySpecificityAndQuality(acceptedMediaTypes);
+				MimeTypeUtils.sortBySpecificity(acceptedMediaTypes);
 			}
 			return acceptedMediaTypes;
 		}
@@ -696,7 +699,6 @@ public abstract class RequestPredicates {
 							this.extension :
 							this.extensionPredicate);
 		}
-
 	}
 
 
@@ -753,7 +755,7 @@ public abstract class RequestPredicates {
 	 * {@link RequestPredicate} for where both {@code left} and {@code right} predicates
 	 * must match.
 	 */
-	static class AndRequestPredicate implements RequestPredicate {
+	static class AndRequestPredicate implements RequestPredicate, ChangePathPatternParserVisitor.Target {
 
 		private final RequestPredicate left;
 
@@ -792,15 +794,27 @@ public abstract class RequestPredicates {
 		}
 
 		@Override
+		public void changeParser(PathPatternParser parser) {
+			if (this.left instanceof ChangePathPatternParserVisitor.Target) {
+				((ChangePathPatternParserVisitor.Target) this.left).changeParser(parser);
+			}
+			if (this.right instanceof ChangePathPatternParserVisitor.Target) {
+				((ChangePathPatternParserVisitor.Target) this.right).changeParser(parser);
+			}
+		}
+
+		@Override
 		public String toString() {
 			return String.format("(%s && %s)", this.left, this.right);
 		}
 	}
 
+
 	/**
 	 * {@link RequestPredicate} that negates a delegate predicate.
 	 */
-	static class NegateRequestPredicate implements RequestPredicate {
+	static class NegateRequestPredicate implements RequestPredicate, ChangePathPatternParserVisitor.Target {
+
 		private final RequestPredicate delegate;
 
 		public NegateRequestPredicate(RequestPredicate delegate) {
@@ -826,16 +840,24 @@ public abstract class RequestPredicates {
 		}
 
 		@Override
+		public void changeParser(PathPatternParser parser) {
+			if (this.delegate instanceof ChangePathPatternParserVisitor.Target) {
+				((ChangePathPatternParserVisitor.Target) this.delegate).changeParser(parser);
+			}
+		}
+
+		@Override
 		public String toString() {
 			return "!" + this.delegate.toString();
 		}
 	}
 
+
 	/**
 	 * {@link RequestPredicate} where either {@code left} or {@code right} predicates
 	 * may match.
 	 */
-	static class OrRequestPredicate implements RequestPredicate {
+	static class OrRequestPredicate implements RequestPredicate, ChangePathPatternParserVisitor.Target {
 
 		private final RequestPredicate left;
 
@@ -885,6 +907,15 @@ public abstract class RequestPredicates {
 			visitor.endOr();
 		}
 
+		@Override
+		public void changeParser(PathPatternParser parser) {
+			if (this.left instanceof ChangePathPatternParserVisitor.Target) {
+				((ChangePathPatternParserVisitor.Target) this.left).changeParser(parser);
+			}
+			if (this.right instanceof ChangePathPatternParserVisitor.Target) {
+				((ChangePathPatternParserVisitor.Target) this.right).changeParser(parser);
+			}
+		}
 
 		@Override
 		public String toString() {
@@ -897,15 +928,25 @@ public abstract class RequestPredicates {
 
 		private final ServerRequest request;
 
-		private final PathContainer pathContainer;
+		private final RequestPath requestPath;
 
 		private final Map<String, Object> attributes;
 
 		public SubPathServerRequestWrapper(ServerRequest request,
 				PathPattern.PathRemainingMatchInfo info, PathPattern pattern) {
 			this.request = request;
-			this.pathContainer = new SubPathContainer(info.getPathRemaining());
+			this.requestPath = requestPath(request.requestPath(), info);
 			this.attributes = mergeAttributes(request, info.getUriVariables(), pattern);
+		}
+
+		private static RequestPath requestPath(RequestPath original, PathPattern.PathRemainingMatchInfo info) {
+			StringBuilder contextPath = new StringBuilder(original.contextPath().value());
+			contextPath.append(info.getPathMatched().value());
+			int length = contextPath.length();
+			if (length > 0 && contextPath.charAt(length - 1) == '/') {
+				contextPath.setLength(length - 1);
+			}
+			return original.modifyContextPath(contextPath.toString());
 		}
 
 		private static Map<String, Object> mergeAttributes(ServerRequest request,
@@ -928,6 +969,7 @@ public abstract class RequestPredicates {
 		}
 
 		@Override
+		@Deprecated
 		public String methodName() {
 			return this.request.methodName();
 		}
@@ -943,13 +985,8 @@ public abstract class RequestPredicates {
 		}
 
 		@Override
-		public String path() {
-			return this.pathContainer.value();
-		}
-
-		@Override
-		public PathContainer pathContainer() {
-			return this.pathContainer;
+		public RequestPath requestPath() {
+			return this.requestPath;
 		}
 
 		@Override
@@ -1058,47 +1095,6 @@ public abstract class RequestPredicates {
 		@Override
 		public String toString() {
 			return method() + " " +  path();
-		}
-
-		private static class SubPathContainer implements PathContainer {
-
-			private static final PathContainer.Separator SEPARATOR = () -> "/";
-
-
-			private final String value;
-
-			private final List<Element> elements;
-
-			public SubPathContainer(PathContainer original) {
-				this.value = prefixWithSlash(original.value());
-				this.elements = prependWithSeparator(original.elements());
-			}
-
-			private static String prefixWithSlash(String path) {
-				if (!path.startsWith("/")) {
-					path = "/" + path;
-				}
-				return path;
-			}
-
-			private static List<Element> prependWithSeparator(List<Element> elements) {
-				List<Element> result = new ArrayList<>(elements);
-				if (result.isEmpty() || !(result.get(0) instanceof Separator)) {
-					result.add(0, SEPARATOR);
-				}
-				return Collections.unmodifiableList(result);
-			}
-
-
-			@Override
-			public String value() {
-				return this.value;
-			}
-
-			@Override
-			public List<Element> elements() {
-				return this.elements;
-			}
 		}
 	}
 
